Merged uckelman-working@7366:HEAD. * Hide ctors of utility classes. * Use indexOf(char) instead of indexOf(String) for single characters. * Just return, don't store in local variable first. * Never call new Boolean(). * Never call new Integer().
git-svn-id: https://svn.code.sf.net/p/vassalengine/svn/VASSAL-src/trunk@7373 67b53d14-2c14-4ace-a08f-0dab2b34000c